version/0.34/_sources/api/solver/_autosummary/settings/curves_1.rst.txt
:orphan:

.. _curves_1:

curves
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.curves_1
    :show-inheritance:

.. rubric:: Attributes

========================   ====================

Attribute                               Summary

========================   ====================
:ref:`lines <lines>`             'lines' child.

:ref:`markers <markers>`       'markers' child.

========================   ====================

.. rubric:: Included in:

==================================================   ==========================================

Parent                                                                                  Summary

==================================================   ==========================================
:ref:`pathline_child <pathline_child>`                         'child_object_type' of pathline.

:ref:`particle_track_child <particle_track_child>`       'child_object_type' of particle_track.

:ref:`xy_plot_child <xy_plot_child>`                            'child_object_type' of xy_plot.

==================================================   ==========================================

