version/0.38/_sources/api/solver/_autosummary/settings/curves_1.rst.txt
:orphan:

.. _curves_1:

curves
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.curves_1
    :show-inheritance:

.. rubric:: Methods

============================================   =====================================================

Method                                                                                       Summary

============================================   =====================================================
:ref:`create <create>`                             Create a new instance of the current object type.

:ref:`delete <delete>`                                                      Delete selected objects.

:ref:`rename <rename>`                                                            Rename the object.

:ref:`list_1 <list_1>`                                                List the names of the objects.

:ref:`list_properties_1 <list_properties_1>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                        Create a copy of the object.

============================================   =====================================================

.. rubric:: Named object type

:ref:`curves_1_child <curves_1_child>`


.. rubric:: Included in:

==================================================   ==========================================

Parent                                                                                  Summary

==================================================   ==========================================
:ref:`pathline_child <pathline_child>`                         'child_object_type' of pathline.

:ref:`particle_track_child <particle_track_child>`       'child_object_type' of particle_track.

:ref:`xy_plot_child <xy_plot_child>`                            'child_object_type' of xy_plot.

==================================================   ==========================================

